fixed layout issues... added BEM to Sass

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -8,12 +8,12 @@
 	width: 100%;
 	height:280px;
 	background:// linear-gradient(#000, transparent 90%),
-				red url("/images/me.png");
+				  url("/images/me.png");
 	background-repeat: no-repeat;
 	background-position: 100% 100%;
 	// reponsive layout for tablets and up
 	@media only screen and (min-width: 850px) { 
-		height:480px;
+		height:450px;
 		
 	}
 }
@@ -23,9 +23,12 @@
 	width:100%;
 }
 
+.l-body-examples{
+	width:100%;
+}
 
 .l-body-footer{
 	width:100%;
 	height: 100px;
-	border-top: 3px solid red;
+	border-top: 3px solid black;
 }
